<resources>
    <string name="app_name">QuadraSolve</string>
    <string name="enter">Enter value</string>
    <string name="calculate_roots">Calculate roots</string>
    <string name="firstroot">1st root:\u0020</string>
    <string name="secondroot">2nd root:\u0020</string>
    <string name="apex">Apex:\u0020</string>
    <string name="clear_history">Clear history</string>
    <string name="history">History</string>
    <string name="complexroots">"Complex roots: "</string>
    <string name="graph">Graph</string>
    <string name="curpoint">"Cursor: "</string>
    <string name="histempty">No recent calculations</string>
    <string name="helpandabout" translatable="false">Help and About</string>
    <string name="helptext1" translatable="false">"This app can be used to find the real and complex solutions of quadratic equations."</string>
    <string name="helptext2" translatable="false">"What is a quadratic equation?"</string>
    <string name="helptext3" translatable="false">
        "A quadratic equation is an equation of the form \"ax² + bx + c = 0\", where a, b and c are real numbers (like 1, 2.5 or -4.6)."
        "You can enter a, b and c (also called coefficients) on the main page when you open the app."
    </string>
    <string name="helptext4" translatable="false">"What is a solution?"</string>
    <string name="helptext5" translatable="false">
        "A solution is a real or complex number x, such that both sides of the equation are equal to 0."
        "Let's consider the example \"x² - 9 = 0\"."
        "It's quite easy to see that both 3 and -3 solve the equation, because 3² - 9 and (-3)² - 9 are both equal to zero."
        "If we consider another example like \"4x² + 3x - 9\", the equation isn't as easy to solve anymore."
        "But with this app, just enter \"4\" in the field labeled \"a\", \"3\" in the field \"b\" and \"-9\" in the field \"c\" and tap on \"Calculate roots\", and the solutions will show up on the top of the screen below the equation."
    </string>
    <string name="helptext5a" translatable="false">"But what is a complex number?"</string>
    <string name="helptext5b" translatable="false">
        "Because some equations like \"x² + 1 = 0\" don't have any solutions in the real numbers, we invent the so-called imaginary unit \"i\" which has the property i² = -1."
        "Thus, we have created two solutions for this equations (i and -i) which are useful in many scenarios."
        "All numbers which contain the imaginary unit are called complex numbers."
    </string>
    <string name="helptext6" translatable="false">"About"</string>
    <string name="helptext7" translatable="false">
        "The android portation of QuadraSolve was a one-man-project by Simon Bohnen."
        "An iOS version which was developed by Marvin von Hagen and Vincent von Oepen is also available."
        "If you found any wrong translations (which is quite likely), you can contact me using the button below."
        "I would be especially thankful if you could translate this help page into another language, as I'm (of course) not able to translate this app into all languages."
    </string>
    <string name="contactme" translatable="false">"Contact me"</string>
    <string name="norealroots" translatable="false">"This quadratic polynomial has no real roots. Do you want to plot the graph anyways?"</string>
    <string name="plotgraph">Plot graph</string>
    <string name="cancel">Cancel</string>
    <string name="notzero">\"a\" may not be zero!</string>
    <string name="useenglish" translatable="false">You might have noticed that the translations in your language aren\'t the best. Do you want to use the English version instead?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="equal" translatable="false">=</string>
    <string name="c" translatable="false">c</string>
    <string name="defaultb" translatable="false">2</string>
    <string name="b" translatable="false">b</string>
    <string name="defaulta" translatable="false">3</string>
    <string name="a" translatable="false">a</string>
    <string name="equalszero" translatable="false">= 0</string>
    <string name="xplus" translatable="false">x +</string>
    <string name="spaceb" translatable="false">b</string>
    <string name="xsquaredplus" translatable="false">x² +</string>
    <string name="defaultc" translatable="false">-6</string>
    <string name="twoconcat" translatable="false">%1$s%2$s</string>
    <string name="fourconcat" translatable="false">%1$s%2$s%3$s%4$s</string>
    <string name="fiveconcat" translatable="false">%1$s%2$s%3$s%4$s%5$s</string>
    <string name="semicolon" translatable="false">;\u0020</string>
    <string name="spaceplusminus" translatable="false">\u0020±\u0020</string>
    <string name="plusminus" translatable="false">±\u0020</string>
    <string name="i" translatable="false">i</string>
    <string name="fofxequals" translatable="false">f(x) =\u0020</string>
    <string name="xsquared" translatable="false">x²</string>
    <string name="plus" translatable="false">\u0020+\u0020</string>
    <string name="minus" translatable="false">\u0020-\u0020</string>
    <string name="x" translatable="false">x</string>
    <string name="ok" translatable="false">OK</string>
    <string name="trace">Trace</string>
    <string name="pan">Pan</string>
    <string name="reset_graph">Reset graph</string>
    <string name="howZoom">Independent scaling</string>
    <string name="inputrequested">You need to enter a value for \"%1$s!\"</string>
    <string name="nan">\"%1$s\" must be a number!</string>
    <string name="use_english_version">Use English version</string>
    <string name="alreadyinstalled" translatable="false">"No need to install if you've already got it!"</string>
</resources>
