<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="de.jamesbeans.quadrasolve.MainActivity" >

    <!--todolater an styleguide anpassen?-->

    <android.support.v7.widget.Toolbar
        android:id="@+id/maintoolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimaryDark"
        android:theme="@style/Widget.AppCompat.ActionBar"
        android:visibility="visible"
        app:popupTheme="@style/Theme.AppCompat.Light"
        app:title="QuadraSolve"
        app:titleTextColor="@android:color/background_light" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/maintoolbar"
        android:layout_alignParentStart="false"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:id="@+id/linearLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/a"
            android:id="@+id/textView"
            android:textSize="@dimen/textSizeEquations"
            android:textColor="@android:color/holo_red_dark" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/xsquaredplus"
            android:id="@+id/textView2"
            android:textSize="@dimen/textSizeEquations"
            android:textColor="#ffffff" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spaceb"
            android:id="@+id/textView3"
            android:textSize="@dimen/textSizeEquations"
            android:textColor="@android:color/holo_orange_dark"
            android:layout_marginStart="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/xplus"
            android:id="@+id/textView4"
            android:textSize="@dimen/textSizeEquations"
            android:textColor="#ffffff" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/c"
            android:id="@+id/textView5"
            android:textSize="@dimen/textSizeEquations"
            android:textColor="@android:color/holo_green_dark"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"/>
        <!--android:layout_alignWithParentIfMissing="false"-->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/equalszero"
            android:id="@+id/textView6"
            android:textSize="@dimen/textSizeEquations"
            android:textColor="#ffffff" />
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculate_roots"
        android:id="@+id/calc"
        android:layout_below="@+id/tablelayout"
        android:layout_centerHorizontal="true"
        android:background="#000000"
        android:textColor="#ffffff"
        android:textAllCaps="false"
        android:onClick="buttonOnClick" />

    <TableLayout
        android:id="@+id/tablelayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical" >

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/a"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="@dimen/textSizeMain" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginStart="3dp"
                android:layout_marginRight="3dp"
                android:layout_marginEnd="3dp"
                android:text="@string/equal"
                android:textColor="#ffffff"
                android:textSize="@dimen/textSizeMain" />

            <!--todo edittexts schöner machen-->
            <EditText
                android:id="@+id/aval"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_marginEnd="45dp"
                android:layout_weight="1"
                android:background="@drawable/bg_edittext"
                android:enabled="true"
                android:hint="@string/enter"
                android:inputType="text"
                android:maxLines="1"
                android:scrollHorizontally="true"
                android:text="@string/defaulta"
                android:textColor="#000000"
                android:textColorHint="#616161"
                android:textSize="@dimen/textSizeMain"
                android:focusableInTouchMode="true" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical" >

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/b"
                android:textColor="@android:color/holo_orange_dark"
                android:textSize="@dimen/textSizeMain" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginStart="3dp"
                android:layout_marginRight="3dp"
                android:layout_marginEnd="3dp"
                android:text="@string/equal"
                android:textColor="#ffffff"
                android:textSize="@dimen/textSizeMain" />

            <EditText
                android:id="@+id/bval"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_marginEnd="45dp"
                android:layout_weight="1"
                android:background="@drawable/bg_edittext"
                android:enabled="true"
                android:hint="@string/enter"
                android:inputType="text"
                android:maxLines="1"
                android:scrollHorizontally="true"
                android:text="@string/defaultb"
                android:textColor="#000000"
                android:textColorHint="#616161"
                android:textSize="@dimen/textSizeMain"
                android:focusableInTouchMode="true" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/c"
                android:textColor="@android:color/holo_green_dark"
                android:textSize="@dimen/textSizeMain" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginStart="3dp"
                android:layout_marginRight="3dp"
                android:layout_marginEnd="3dp"
                android:text="@string/equal"
                android:textColor="#ffffff"
                android:textSize="@dimen/textSizeMain" />

            <EditText
                android:id="@+id/cval"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_marginEnd="45dp"
                android:layout_weight="1"
                android:background="@drawable/bg_edittext"
                android:hint="@string/enter"
                android:inputType="text"
                android:maxLines="1"
                android:scrollHorizontally="true"
                android:text="@string/defaultc"
                android:textColor="#000000"
                android:textColorHint="#616161"
                android:textSize="@dimen/textSizeMain"
                android:focusableInTouchMode="true" />
        </TableRow>
    </TableLayout>

    <de.jamesbeans.quadrasolve.NumpadKeyboardView
        android:id="@+id/keyboardView"
        android:visibility="gone"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:keyBackground="@drawable/key_background"
        android:keyTextColor="@color/black"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:layout_alignParentBottom="true"/>
    <!--todolater werbung einbauen-->
</RelativeLayout>
