<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="de.jamesbeans.quadrasolve.GraphActivity" >

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/function"
        android:background="@color/black"
        android:theme="@style/Widget.AppCompat.ActionBar"
        android:visibility="visible"
        app:popupTheme="@style/Theme.AppCompat.Light"
        app:title="@string/graph"
        app:titleTextColor="@android:color/background_light" />

    <TextView
        android:text=""
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/standardMargin"
        app:layout_constraintBottom_toTopOf="@+id/root1"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:id="@+id/function"
        android:typeface="normal"
        android:textSize="@dimen/functiontextsize"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <TextView
        android:text="@string/firstroot"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:id="@+id/root1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/function"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/root2"
        android:visibility="gone"
        android:textSize="@dimen/infotextsize"
        android:textColor="@android:color/white" />

    <TextView
        android:text="@string/secondroot"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/root1"
        app:layout_constraintBottom_toTopOf="@+id/apex"
        android:id="@+id/root2"
        android:visibility="gone"
        android:textSize="@dimen/infotextsize"
        android:textColor="@android:color/white" />


    <TextView
        android:text="@string/apex"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/curpoint"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/root2"
        android:id="@+id/apex"
        android:textSize="@dimen/infotextsize"
        android:textColor="@android:color/white"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/curpoint"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/parabel"
        app:layout_constraintTop_toBottomOf="@+id/apex"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/curpoint"
        android:textColor="@android:color/white"
        android:textSize="@dimen/infotextsize"
        android:visibility="invisible"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp" />

    <de.jamesbeans.quadrasolve.GraphView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/graphsettings"
        app:layout_constraintTop_toBottomOf="@+id/curpoint"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/parabel"
        android:layout_marginTop="@dimen/standardMargin"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <LinearLayout
        android:id="@+id/graphsettings"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/standardMargin"
        android:layout_marginBottom="@dimen/standardMargin"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/parabel">

        <co.ceryle.segmentedbutton.SegmentedButtonGroup
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/graphmode"
            app:sbg_backgroundColor="@color/black"
            app:sbg_selectorColor="@color/blue"
            app:sbg_borderColor="@color/blue"
            app:sbg_borderSize="2dp" > <!--app:sbg_radius="5dp"-->

            <co.ceryle.segmentedbutton.SegmentedButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                app:sb_text="@string/trace"
                app:sb_textColor="@color/white"
                android:textAllCaps="false"
                android:id="@+id/trace" />

            <co.ceryle.segmentedbutton.SegmentedButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                app:sb_text="@string/pan"
                app:sb_textColor="@color/white"
                android:textAllCaps="false"
                android:id="@+id/pan" />

        </co.ceryle.segmentedbutton.SegmentedButtonGroup>

        <Button
            android:id="@+id/reset"
            android:layout_width="wrap_content"
            android:layout_height="33dp"
            android:layout_marginStart="16dp"
            android:background="@drawable/standardbutton"
            android:textColor="@color/white"
            android:textColorHighlight="@color/black"
            android:textAllCaps="false"
            android:text="@string/reset_graph" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
